# rhd-electroplating

./: .appveyor.yml  .gitignore  CMakeLists.txt  README.md  config.h.in
contrib/ci/: Dockerfile
contrib/debian/: changelog  control  copyright
data/: CMakeLists.txt  rhd2000electroplating.desktop
src/: CMakeLists.txt  Electroplating.pro  boardcontrol.cpp  boardcontrol.h  common.h  configurationparameters.h  configurationwindow.cpp  configurationwindow.h  dataprocessor.cpp  dataprocessor.h  electrodeimpedance.h  electroplatingboardcontrol.cpp  electroplatingboardcontrol.h  globalconfigurationwindow.cpp  globalconfigurationwindow.h  globalconstants.h  globalparameters.h  impedancehistoryplot.cpp  impedancehistoryplot.h  impedancemeasurecontroller.cpp  impedancemeasurecontroller.h  impedanceplot.cpp  impedanceplot.h  main.cpp  mainwindow.cpp  mainwindow.h  okFrontPanelDLL.cpp  oneelectrode.cpp  oneelectrode.h  presentimpedancesplot.cpp  presentimpedancesplot.h  rhd2000config.cpp  rhd2000config.h  rhd2000datablock.cpp  rhd2000datablock.h  rhd2000evalboard.cpp  rhd2000evalboard.h  rhd2000registers.cpp  rhd2000registers.h  saveformat.cpp  (+14 more)
